Semana-Conectividade-e-Redes/Desafio4/env/site-desafiofinal/security-groups.tf
################################################################################
# Security Groups
################################################################################
module "sg_eice" {
  source  = "terraform-aws-modules/security-group/aws"
  version = "5.1.2"

  name        = "${var.desc_tags.project}-sg-eice"
  description = "sg-eice"
  vpc_id      = module.vpc.vpc_id

  ingress_cidr_blocks = [module.vpc.vpc_cidr_block]
  ingress_with_cidr_blocks = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      description = "allow all (ipv4)"
      cidr_blocks = "0.0.0.0/0"
    }
  ]
  egress_with_cidr_blocks = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      description = "allow all out (ipv4)"
      cidr_blocks = "0.0.0.0/0"
    }
  ]
}

module "sg_ecr_endpoint" {
  source  = "terraform-aws-modules/security-group/aws"
  version = "5.1.2"

  name                = "${var.desc_tags.project}-sg-ecr"
  description         = "sg-ecr"
  vpc_id              = module.vpc.vpc_id
  ingress_cidr_blocks = [module.vpc.vpc_cidr_block]
  ingress_with_cidr_blocks = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      description = "allow all (ipv4)"
      cidr_blocks = "0.0.0.0/0"
    }
  ]
  egress_with_cidr_blocks = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      description = "allow all out (ipv4)"
      cidr_blocks = "0.0.0.0/0"
    }
  ]
}

module "sg_rds" {
  source  = "terraform-aws-modules/security-group/aws"
  version = "5.1.2"

  name                = "${var.desc_tags.project}-sg-ecr"
  description         = "sg-ecr"
  vpc_id              = module.vpc.vpc_id
  ingress_cidr_blocks = [module.vpc.vpc_cidr_block]
  ingress_with_cidr_blocks = [
    {
      from_port   = 3306
      to_port     = 3306
      protocol    = "tcp"
      description = "MySQL access from within VPC"
      cidr_blocks = module.vpc.vpc_cidr_block
    }
  ]
}

module "autoscaling_sg" {
  source  = "terraform-aws-modules/security-group/aws"
  version = "~> 5.0"

  name        = "${var.ecs_name}-sg-autoscaling"
  description = "Autoscaling group security group"
  vpc_id      = module.vpc.vpc_id

  ingress_cidr_blocks = [module.vpc.vpc_cidr_block]
  ingress_with_cidr_blocks = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      description = "allow all (ipv4)"
      cidr_blocks = "0.0.0.0/0"
    }
  ]
  egress_with_cidr_blocks = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      description = "allow all out (ipv4)"
      cidr_blocks = "0.0.0.0/0"
    }
  ]

  tags = var.desc_tags
}
################################################################################
# Security Groups Rules
################################################################################
resource "aws_security_group_rule" "eiec_sg_rules" {
  count             = length(keys(data.external.get_ip_range_eiec.result))
  security_group_id = module.autoscaling_sg.security_group_id
  type              = "egress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = [element(keys(data.external.get_ip_range_eiec.result), count.index)]
}
